--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run build
+          CI=false npm run build
+        env:
+          CI: false
         
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
